add src from practices

--- a/doc.tex
+++ b/doc.tex
@@ -8,14 +8,10 @@
 \begin{document}
 	\input{title.tex}
 	\input{src/introduction.tex}
+	\input{src/domainknowledge.tex}
 	\input{src/task.tex}
-	% \input{src/offer.tex}
-	% \input{src/project.tex}
-	% \input{src/spec.tex}
-	% \input{src/schemes.tex}
-	% \input{src/drawings.tex}
-	% \input{src/picture.tex}
-	% \input{src/conclusion.tex}
+	\input{src/project.tex}
+	\input{src/conclusion.tex}
 	\newpage
 	\bibliographystyle{/home/groot/latex/utf8gost705u}
 	\addcontentsline{toc}{chapter}{Список использованных источников}
