--- a/src/project.tex
+++ b/src/project.tex
@@ -1,89 +1,141 @@
-\chap{Технический проект}
-	\section{Техническое описание}
-		\subsection{Назначение}
-				Устройство предназначения для мониторинга и включения системы оповещения в случае
-			реагирования датчиков движения.
-		\subsection{Принцип работы}
-				К выходам АЦП подключаются датчики движения. К выходу ЦАП подключается
-			управляющее устройство, компаратор.
+\chap{Моделирование и анализ}
+	В качестве реализации языка Prolog был выбран SWI-Prolog.
+		Это открытая реализация, работающая на Unix, MacOS и Windows.
+		В данной реализации имеется необходимы функционал, а именно предикаты nb\_getval, nb\_setval и nb\_current.
+		Эти предикаты позволяют использовать другие предикаты в качестве глобальных переменных, что
+		позволяет существенно упростить написание правил для вычисления.
 
-				Сигналы, полученные от датчиков, поступают на аналоговый сумматор AD1, значение
-			выхода (контакт 6) AD1 преобразуется в цифровой сигнал с помощью DD1. К
-			управляющему устройству DD4 подключаются выходs с преобразователя DD1 и с микроконтроллера
-			DD3. Результат сравнения получаемой и хранимой информации подаётся с управляющего
-			устройства DD4 на преобразователь DD2. Сигналы, полученные от DD2 выводится на диоды
-			R1-R10. Необходимые настройки хранятся в микроконтроллере DD3.
+	В процессе реализации было создано порядка десяти файлов с описанием правил логического вывода
+		общей суммой порядка семиста строк. Такое большое количество правил обусловлено наличием деталей и нюансов.
+		Ниже представлен основной файл, в котором реализован инициализация логического вывода.
+		Данный код иллюстрирует реализацию формулы времени. Благодаря функционалу SWI-Prolog
+		в дальнейшем предикаты отражающие время можно будет указывать в правилах только при необходимости.
 
-				Настройки, определяемые производителем, устанавливаются с помощью X1, выходы
-			которого подключены к микроконтроллеру DD3.
-	\section{Расчёты}
-			Прибор сравнивает значение с датчиков и заданное значение, результаты передаются на
-		выходы управляющего устройства.
+	Реализации правил manage\_people и manage\_elevators вынесены в другие файлы,
+		как как являются весьма громоздкими.
+		Manage\_people отвечает за внешний фактор (случайное появление нуждающихся в лифте людей).
+		А manage\_elevators включает в себя формулы движения лифтов.
 
-			Различные варианты реализации представлены на рисунках ниже
-		\subsection{Оценка теплового режима}
-				Тепловой режим выбирается с помощью диаграммы, приведенной на рисунке \ref{projectp1}. Область
-			разделяемой зоны соответствует каждому способу охлаждения
-			\begin{figure}[ht!]
-				\centering
-				\includegraphics[width=50mm]{src/pictures/projectp1.png}
-				\caption{Диаграмма выбор способа охлаждения}\label{projectp1}
-			\end{figure}
-			\begin{enumerate}
-				\changefontsizes[14pt]{14pt}
-				\setlength{\itemsep}{0pt}
-				\item Естественное;
-				\item Естественное или принудительная конвекция;
-				\item Принудительная конвекция;
-				\item Принудительная конвекция или принудительная жидкостная.
-			\end{enumerate}
-			\subsubsection{Допустимый перегрев нагретой зоны}
-					Для определения зоны необходимо рассчитать $\bigtriangleup T_{oc}$(допустимый перегрев нагретой зоны): \\
-				$\bigtriangleup T_{oc} = T_{min} - T_{oc}$
-				, где $T_{min}$ – допустимая температура нагретой зоны,
-				$T_{oc}$ – максимальная температура окружающей среды.
+\section{Пример работы реализации}
 
-					Расчет поверхности нагретой зоны \\
-				$S_k = 2 * (L_1 * L_2 + (L_1 + L_2) * L_3 * K_3)$
-				, где $L_1$ – длина, м; $L_1 = 0,12$
-				, $L_2$ – ширина, м; $L_2 = 0,09$
-				, $L_3$ – высота, м; $L_3 = 0,05$
-				, $K_3$ – коэффициент заполнения, равный отношению объема функциональных и монтажных элементов внутри объема корпуса к его внутреннему объему.
-			\subsubsection{Плотность теплового потока}
-				$q = {P * K}/{S_k}$
-				, где Кn = 1 при н.у. (760 мм. рт.ст);Р – суммарная тепловая мощность.
-			\subsubsection{Расчет}
-				$\bigtriangleup T_{oc} = 70 - 35 = 35$ \\
-				$S_k = 2 * (0,12 * 0,09 + (0,12 + 0,09) * 0,05 * 0,0116) = 0,0214 \textup{м}^2$ \\
-				$q = {4}/0,0214 = 201,34$ $\textup{Вт/м}^2$ \\
-				$lg(201,34) = 2,3$ $\textup{Вт/м}^2$
+	Данный пример иллюстрирует работу группы лифтов, где их количество равно 2, в здании с 5 этажами.
+		В ходе работы системы появится два человека в моменты времени $t_2$ и $t_4$ на этажах $e_1$ и $e_0$,
+		и у каждого человека целью будет четвёртый этаж $d_4$.
 
-				Из полученных расчетов можно сделать вывод, что прибору не требуется дополнительное охлаждение.
-		\subsection{Расчет надежности}
-			Для расчета средней наработки на отказ используется формула 4 и данные из таблицы \ref{projectt1}, полученные из справочника.
-			$T_{cp} = 1/{\Sigma\lambda_i}$, 
-			$T_{cp} = 366300$ часов.
-			\input{src/tables/projectt1.tex}
-		\subsection{Программная часть}
-			\subsubsection{Описание}
-				Программа, которая вшивается в микроконтроллер, работает по прицепу автомата. То есть при поступлении новой информации вся хранимая информация сдвигается на определённый размер записи. В момент переполнения банка данных самая старая запись стирается и записывается новая в начало, а остальные записи так же сдвигаются на размер записей. 
-				
-				\subsubsection{Характеристики программной части продукта}
-				Ниже представлен краткий список свойств и рекомендаций программной части продукта:
-			\begin{enumerate}
-				\changefontsizes[14pt]{14pt}
-				\setlength{\itemsep}{0pt}
-				\item Запись имеет следующий формат: <<HH:MM dd.mm.yyyy>>;
-				\item Для реализации программной части продукта необходим разработчик специализирующийся на микропрограммах;
-				\item Сам процесс прошивки микроконтроллера должен происходить по средствам ПЛИС;
-				\item Для считывания записей, нужен вызов специалиста, который средствами микроконтроллера извлечёт необходимую информацию;
-				\item В случае отказа микроконтроллера следует произвести мероприятия по его восстановлению, проверить целостность данных и устранить причину отказа.
-			\end{enumerate}
+	Изначально первая кабина находится на первом этаже $e_0$, а вторя на втором $e_1$.
+		Ниже приведён лог показывающий работу системы:
 
-			\subsubsection{Кодирование}
-				На рисунке \ref{projectp2} изображен листинг прошивки микроконтроллера.
-				\begin{figure}[ht!]
-					\centering
-					\includegraphics[width=150mm]{src/pictures/program.png}
-					\caption{Диаграмма выбор способа охлаждения}\label{projectp2}
-				\end{figure}
+	Изучив выше изложенный журнал, можно увидеть результат, что каждый человек доставлен и ожидание составило не более одной единицы времени.
+
+\section{SimPy}
+
+SimPy - это Python фреймворк процессо-ориентированной дискретно-событийной системы моделирования. Его диспетчеры событий основаны на функциях-генераторах Python.
+
+Также они могут использоваться для создания асинхронных сетей или для реализации мультиагентных систем (с как моделируемым, так и реальным взаимодействием).
+
+Процессы в SimPy - это просто Python генераторы, которые используются для моделирования активных компонентов, например, таких как покупатели, транспортные средства или агенты. SymPy также обеспечивает различные виды общих ресурсов для моделирования точек с ограниченной пропускной способностью (например, серверов, касс, тоннелей). Начиная с версии 3.1, SimPy также будет обеспечить возможности мониторинга для помощи в сборе статистических данных о ресурсах и процессах. 
+
+SymPy представляет собой открытую библиотеку символьных вычислений на языке Python. Цель SymPy - стать полнофункциональной системой компьютерной алгебры (CAS), при этом сохраняя код максимально понятным и легко расширяемым. SymPy полностью написан на Python и не требует сторонних библиотек.
+
+SymPy можно использовать не только как модуль, но и как отдельную программу. Программа удобна для экспериментов или для обучения. Она использует стандартный терминал IPython, но с уже включенными в нее важными модулями SymPy и определенными переменными x, y, z.
+
+\subsection{Реализация на SimPy}
+
+	Данная симуляция системы управления группой лифтов с ограниченным количеством кабин и несколькими людьми,
+		которые приходят для попадания с одного этажа на другой.
+		В данной системе используется ресурс для моделирования ограниченного количества кабин.
+		Он также определяет процесс выбора кабины и перевозку ей человека.
+
+	Когда человек появляется рядом с шахтой лифта, он вызывает первую из свободных кабин.
+		Как только он его кабина забирает, время ожидания человека прекращается.
+		Он, наконец, добирается до нужного этажа и уходит.
+
+	После старта системы начинается генерация людей, они появляются после случайного интервала времени,
+	пока продолжается симуляция.
+
+
+	При том, что данная программа является многопоточной, стоит отметить тот факт, что здесь используются общие ресурсы.
+		Эти ресурсы могут использоваться для ограничения количества процессов, использующих их одновременно.
+		Процесс должен запрашивать право использования ресурса. Как только право на использование больше не требуется,
+		оно должно быть выпущено. Данная система смоделирована как ресурс с ограниченным количеством кабин.
+		Люди прибывают к кнопке вызова кабины и просят выполнить перевозку на другой этаж.
+		Если все кабины заняты, человек должен ждать, пока один из пассажиров не закончит поездку и не освободит кабину.
+
+		\subsection{Пример работы реализации}
+
+	Данный пример иллюстрирует работу группы лифтов, где их количество равно 2, в здании с 30 этажами.
+		В ходе работы системы появится люди в случайные моменты времени на случайных этажах этажах,
+		и у каждого человека целью является добраться на другой этаж.
+
+	Изначально первая кабина находится на первом этаже $e_0$, а вторя на втором $e_1$.
+		Ниже приведён лог показывающий работу системы:
+
+	Изучив выше изложенный журнал, можно увидеть, что за время симуляции появилось 4 человека,
+		каждый человек доставлен.
+
+\section{Интеллектуальная реализация}
+
+Однако, пусть реализация логического вывода на языке Prolog является целесообразной задачей, но для разделения моделируемой системы на логический блок и блок взаимодействия объектов необходима клиент-сервергая связка. А реализация сервера или клиента на языке Prolog не является его типовой задачей, что и касается реализации графической составляющей системы моделирования.
+
+	Таким образом более целесообразном будет оставить блок взаимодействия объектов реализованными на языку Prolog.
+		Более того, правила описанные для модуляции системы будут использованы
+		для построения решения логическим блоком.
+
+	Данный код иллюстрирует реализацию формулы реализующие обход возможных вариантов будущего, сбор статистики с каждого варианта и выбор наиболее подходящего варианта будущего по признаку. в данном случае интересующим признаком является среднее ожидание человеком кабины. 
+
+% \input{src/pl_mod_code.tex}
+
+	Благодаря функционалу SWI-Prolog
+		предикаты отражающие состояние системы в момент вызова кабины можно будет указывать в правилах только при необходимости.
+
+		\subsection{Пример работы реализации}
+
+	Данный пример иллюстрирует работу группы лифтов, где их количество равно 2, в здании с 5 этажами.
+		В ходе работы системы появится два человека в моменты времени $t_2$ и $t_4$ на этажах $e_1$ и $e_0$,
+		и у каждого человека целью будет четвёртый этаж $d_4$.
+
+	Изначально первая кабина находится на первом этаже $e_0$, а вторя на втором $e_1$.
+		Ниже приведён лог показывающий работу системы:
+
+		%example
+
+Изучив выше изложенный журнал, можно увидеть, что происходит построение дерева формулы и её обход.
+	Для того чтобы было нагляднее следует прокомментировать строку лога.
+
+Первые четыре столбца в логе - это реальное время журналирования момента модуляции.
+	Следующим столбцом идёт связка двух чисел, первое число - это номер процесса,
+	он необходим для идентификации сессии, а второе число показывает момент времени модуляции.
+	Ещё одним столбцом является связка строки и числа, число - это так же момент времени в данной ветки формулы,
+	А строка отражает индекс чанка формулы в момент вывода, r означает корень выводимой формулы, а дальше серез нижние подчёркивание перечислены индексы кабин, которые участвуют в логическом выводе в данные момент.
+
+	\section{Сравнительный анализ}
+
+	Как было упомянуто выше одним из основных критериев является средняя длительность ожиданий.
+		Так же можно сравнить время выполнения модуляции, объём занимаемой памяти и сложность реализации.
+		Под сложностью мы будем понимать суммарное количество строк кода каждого из проектов.
+
+	Сравнив были получены следующие данные.
+
+		Среднее время ожидания:
+			% \begin{figure}[!htb]
+			%         \includegraphics[width=\linewidth]{src/1.png}
+			%         \centering
+			% \end{figure}
+
+		Реальное время выполнения модуляции:
+			% \begin{figure}[!htb]
+			%         \includegraphics[width=\linewidth]{src/2.png}
+			%         \centering
+			% \end{figure}
+
+		Объём и сложность:
+			% \begin{figure}[!htb]
+			%         \includegraphics[width=\linewidth]{src/3.png}
+			%         \centering
+			% \end{figure}
+
+		Входе выполнения экспериментов на выполнение модуляций с большими числами не хватило вычислительной мощи
+		оборудования для реализаций на Prolog. Что иллюстрирует потребность в ресурсах у данных подходов
+		к решению задачи.
+
+		Но не смотря на провал с большими числами. Третья реализация показала себя лучше, чем остальные.
