--- a/src/task.tex
+++ b/src/task.tex
@@ -1,221 +1,103 @@
-\chap{Техническое задание}
-	\section{Обоснование для проведения работ}
-		Задание преподавателя.
-	\section{Исполнитель работ}
-		Студент ИрГУПС ФУТиИT группы ПИм-16 Арляпов С.В.
-	\section{Цель выполнения работ}
-		Разработать устройство охранной сигнализации, предназначенное для контроля, мониторинга и управления территориально-распределенными объектами муниципальных и ведомственных образований с целью увеличения безопасности.
-	\section{Назначение продукции}
-		Устройство будет обеспечивать сбор, обработку, передачу и представление в заданном виде служебной информации и информации о проникновении (попытки проникновения).
-	\section{Технические требования}
-		\subsection{Состав продукции}
-		 	\begin{enumerate}
-\changefontsizes[14pt]{14pt}
-				\item Основной блок устройства обработки информации;
-				\item Датчики «Рапид 3» - 3 штуки;
-				\item Витая пара – 1 км;
-				\item Вилки «RJ-45» - 5 штук;
-				\item Эксплуатационная документация.
-			\end{enumerate}
-		\subsection{Требования к показателям назначения}
-			\subsubsection{Выполняемые функции}
-				Разрабатываемое устройство должно обеспечивать в режиме реального времени:
-				\begin{enumerate}
-\changefontsizes[14pt]{14pt}
-					\item сбор данных;
-					\item обработку данных;
-					\item оповещение оператора.
-				\end{enumerate}
-			\subsubsection{Нормы и количественные показатели}
-				\begin{itemize}
-				\changefontsizes[14pt]{14pt}
-					\item Время реакции не менее 1 секунды.
-					\item Время срабатывания механизма оповещения не менее 30 секунд.
-					\item Дальность обнаружения датчиком не менее 15 метров.
-				\end{itemize}
-			\subsubsection{Технические характеристики (параметры)}
-				Максимальное количество подключаемых датчиков не менее 4 штук.
+\chap{Постановка задачи}
 
-				Максимальная длина кабеля, подключающего датчик к устройству, 400 метров
-			\subsubsection{Требования к совместимости}
-				Особых требований не предъявляется.
+	Целью данного исследования является выявление принципиальной возможности и целесообразности построения
+		и использования системы логического вывода в рассматриваемой задаче.
+		Поэтому оправданы все упрощения, которые неизбежны при построении моделей и переходе к реальному приложению.
 
-			\subsubsection{Требования по мобильности}
-				Разрабатываемое изделие должно быть выполнено в стационарном исполнении.
-		\subsection{Требования к электропитанию}
-			Электропитание осуществляется по первой категории надежности от однофазной (трехфазной) сети переменного тока 220В, 50Гц, от отдельной группы электрощита, находящегося в охраняемом помещении.
-		\subsection{Требования надежности}
-			\subsubsection{Требования по безотказности}
-				Разрабатываемое устройство должно удовлетворять следующим требованиям:
-				\begin{itemize}
-				\changefontsizes[14pt]{14pt}
-					\item вероятность безотказной работы 0,95, не менее;
-					\item средняя наработка на отказ 50000 часов, не менее;
-					\item среднее время восстановления 1 час, не более.
-				\end{itemize}
-			\subsubsection{Требования по долговечности}
-				Разрабатываемое устройство должно удовлетворять следующим требованиям: срок службы до списания 8 лет, не менее.
-			\subsubsection{Критерии отказов и предельного состояния изделия}
-				Отказом разрабатываемого изделия считают невыполнение функций, заданных требованиями п.5.2.1 настоящего технического задания.
-		\subsection{Конструктивные требования}
-			\subsubsection{Конструктивное исполнение входящих в разрабатываемое устройство должно обеспечивать:}
-				\begin{enumerate}
-\changefontsizes[14pt]{14pt}
-					\item Удобство эксплуатации;
-					\item Возможность ремонта.
-				\end{enumerate}
-				\subsubsection{Разрабатываемое изделие должно иметь моноблочную конструкцию.}
-				\subsubsection{Разрабатываемое изделие должно соответствовать следующим требованиям:}
-					\begin{enumerate}
-\changefontsizes[14pt]{14pt}
-						\item Размеры:
-							\begin{enumerate}
-\changefontsizes[14pt]{14pt}
-								\item Габаритные - 450х450х160 мм, не более;
-								\item Установочные - 500х500х210 мм, не более.
-							\end{enumerate}
-						\item Масса - 2 кг, не более.
-						\item Устройство крепится на вертикальную поверхность с помощью винтовых соединений.
-						\item Тип кабеля – витая пара.
-						\item Тип порта - RJ-45.
-						\item Разрабатываемое изделие должно иметь максимальную длину кабеля, подключающего датчик к устройству, 400 метров.
-					\end{enumerate}
+\subsection{Упрощения}
+	Первым основным упрощением является дискретность времени с заданной величиной интервала между
+		соседними моментами времени (тактами), содержащее начальный момент и бесконечно продолжимое вправо.
+		Высота этажей считается одинаковой, и скорость движения лифта с одного этажа на другой полагаем
+		равной одному такту. Длительность остановки кабин для входа-выхода пассажиров равняется одному такту.
+		Так же не рассматриваются случаи переполнения кабин.
 
-					Покрытия должны обеспечивать необходимую коррозионную стойкость, надежную работу и декоративный вид разрабатываемого изделия при эксплуатации и при хранении.
+	Считается, что любой пассажир придерживается следующим правилам:
 
-					Оборудование не должно требовать доступа сзади при монтаже, подводке кабеля и обслуживании.
+	1) Для вызова лифта он нажимает на этаже кнопку вызова и ждёт кабину, без ложных и ошибочных вызовов;
 
-					Внешние электрические разъемы должны иметь маркировку, позволяющую определить их назначение.
+	2) Войдя в кабину, пассажир задаёт ей команду, для чего он нажимает кнопку нужного этажа,
+		который вносится в маршрут данной кабины, без ложных и ошибочных команд.
 
-					Электрическая схема должна быть выполнена на единой печатной плате. Монтаж должен осуществляться с помощью методов групповой пайки.
+	Простейшим алгоритмом принятия решения является поиск ближайшей кабины к месту вызова.
+		Однако, термин «ближайшая» требует уточнения и рассмотрения примера. 
 
-		\subsection{Требования по эргономике и технической эстетике}
-			Кодирование и компоновка средств отображения информации, органов управления на пульте управления, цветовое оформление лицевых панелей пульта разрабатываемого изделия должны обеспечивать безошибочность и быстродействие операторов, удобство и безопасность работы в любое время суток.  Необходимо предусмотреть независимое автономное питание, обеспечивающее работу ПКП и извещателей в течении не менее чем 24 часов в дежурном режиме и в течении не менее чем 3 часов в режиме «тревога».
-		\subsection{Требования к эксплуатации, удобству технического обслуживания и ремонта}
-			\subsubsection{Требования к стойкости к внешним воздействующим факторам}
-				1) Разрабатываемое изделие должно быть стойким, устойчивым и прочным к воздействию климатических факторов в соответствии с таблицей \ref{taskt1}:
-				\input{src/tables/taskt1.tex}
+	Допустим, есть система из k = 2 кабин, способных перемещаться по n = 5 этажам.
+		Пусть кабины находятся на 1-м и 2-м этажах, первая пуста и находится в покои,
+		а второй предстоят остановки на 3-м и 4-м этажах. Поступает вызов с пятого этажа,
+		и первая кабина получается ближайшей, так как её требуется 4 такта,
+		а второй кабине требуется 5 тактов. Получается дистанция – это количество тактов,
+		которое необходимо кабине, чтобы добраться до этажа, выполняя уже сформированный маршрут (рисунок 1).
 
-				2) Разрабатываемое изделие должно быть устойчивым к воздействию механических факторов в соответствии с таблицей \ref{taskt2}:
-				\input{src/tables/taskt2.tex}
+	Есть и другой подход, который основывается на исключении худших альтернатив на основе логического вывода.
+		И если после сокращения допустимых альтернатив их останется несколько,
+		то выбор может быть случайным или основываться на каких-либо критериях.
+		В этом и предыдущих подходах одним из основных критериев является средняя длительность ожиданий.
 
-			\subsubsection{Требования к эксплуатационным показателям}
-				\begin{enumerate}
-\changefontsizes[14pt]{14pt}
-					\item Разрабатываемый Комплекс должен обеспечивать циклическую работу со следующими параметрами цикла: время загрузки – 30 мин., время обработки – 10 час., время выгрузки – 30 мин., время подготовки – 10 мин.
-					\item Должен быть обеспечен режим работы от аварийного источника питания.
-					\item Периодическое техническое обслуживание разрабатываемого изделия должно проводиться не реже одного раза в год.
-					\item Периодическое техническое обслуживание должно включать в себя обслуживание всех датчиков.
-					\item К обслуживанию комплекса должны допускаться лица, имеющие допуск к работе с электроустановками напряжением до 220 В.
-					\item Гарантийный срок разрабатываемого Комплекса должен составлять 5 лет, не менее.
-				\end{enumerate}
-			\subsubsection{Требования по ремонтопригодности}
-				\begin{enumerate}
-\changefontsizes[14pt]{14pt}
-					\item Обслуживание и ремонт разрабатываемого Изделия должны производиться без применения специальных инструментов."
-					\item Требования к ЗИП
-						\begin{enumerate}
-\changefontsizes[14pt]{14pt}
-							\item Комплект ЗИП должен включать запасные части, необходимые для ремонта и поддержания работоспособного состояния разрабатываемого изделия в течение одного года.
-							\item В комплект ЗИП должны входить дополнительные датчики и вилки RJ-45.
-						\end{enumerate}
-				\end{enumerate}
-		\subsection{Требования безопасности}
-			\subsubsection{Условия работы персонала разрабатываемой Системы должны соответствовать санитарным нормам по СанПиН 2.2.2/2.4.1340-03 \cite{sanpin}.}
-			\subsubsection{Требования безопасности при монтаже, наладке, эксплуатации, обслуживании и ремонте разрабатываемого Комплекса должны быть приведены в эксплуатационной документации.}
-		\subsection{Требования к упаковке и маркировке}
-			\subsubsection{Требования к упаковке}
-				Упаковка должна быть выполнена из картона материалов и обеспечивать защиту от ударных воздействий.
-			\subsubsection{Требования к маркировке}
-				Надписи, цифры, буквы и знаки, нанесенные при маркировке, должны быть хорошо видны, и сохранять четкость в течение всего срока эксплуатации.
-				Маркировка упаковки для транспортирования должна содержать основные, дополнительные, информационные надписи и манипуляционные.
-		\subsection{Требования к консервации, хранению и транспортированию}
-			\subsubsection{Условия хранения}
-				Изделие должно храниться в упакованном виде в отапливаемых и вентилируемых помещениях при температуре от 5 до 35 °С и относительной влажности воздуха не выше 80\% (при температуре 25 °С) при отсутствии в этих помещениях конденсации влаги, паров химически активных веществ и источников электромагнитных полей.
-			\subsubsection{Срок хранения}
-				Срок хранения разрабатываемого изделия в условиях отапливаемых хранилищ в соответствии с паспортными данными на аппаратуру, но не менее 8 лет.
-			\subsubsection{Условия транспортирования:}
-				\begin{itemize}
-				\changefontsizes[14pt]{14pt}
-					\item Температура окружающей среды: от минус 50 до 50 °С;
-					\item Относительная влажность до 95 \% при температуре 30 °С;
-					\item Атмосферное давление от 84 до 107 кПа (от 630 до 800 мм рт. ст.);
-					\item Воздействие ударных нагрузок многократного действия с пиковым ускорением не более 15g (147 м/с2) при длительности действия ударного ускорения 10–15 мс.
-				\end{itemize}
-				\subsubsection{Гарантийный срок хранения разрабатываемого прибора в заводской упаковке в отапливаемом помещении}
-					Не менее одного года.
-		\subsection{Требования стандартизации, унификации и каталогизации}
-			Особых требований не предъявляется.
-	\section{Требования по видам обеспечения}
-		\subsection{Требования по метрологическому обеспечению}
-			Особых требований не предъявляется.
-		\subsection{Требования по программному обеспечению}
-			\subsubsection{Назначение}
-				Программное обеспечение должно предоставлять возможность работы с информацией,
-					то есть реализовывать основные функции при работе с информацией, а именно:
-				\begin{itemize}
-				\changefontsizes[14pt]{14pt}
-					\item Сбор;
-					\item Хранение;
-					\item Передачу.
-				\end{itemize}
-			\subsubsection{Нормативные документы}
-				При разработке и вводе в эксплуатацию программного обеспечения
-				Исполнитель должен руководствоваться требованиями следующих
-				нормативных документов Госстандарта:
-				\begin{itemize}
-				\changefontsizes[14pt]{14pt}
-					\item ГОСТ 34.601.90 – стандарт, устанавливающий стадии и этапы создания АС, а также содержание работ на каждом этапе \cite{gost90};
-					\item ГОСТ 34.603.92 – стандарт, устанавливающий виды испытаний АС и общие требования к их проведению \cite{gost92}.
-				\end{itemize}
-	\section{Технико-экономические требования}
-		\subsection{Основные технико-экономические требования}
-			Разрабатываемый продукт должен обеспечить:
-			\begin{itemize}
-				\changefontsizes[14pt]{14pt}
-				\item стимулирование внедрения и использования эффективных, оптимальных по стоимости, охранных систем;
-				\item создание унифицированного решения для организации информационного взаимодействия между подразделениями.
-			\end{itemize}
-			Внедрение создаваемой в рамках разработки научно-технической продукции должно обеспечивать следующие социально-экономические эффекты:
-			\begin{itemize}
-				\changefontsizes[14pt]{14pt}
-				\item сокращение сроков разработки 3 месяца;
-				\item уменьшение технического риска при реализации передовых технических решений в сфере охраны.
-			\end{itemize}
-			Разрабатываемая продукция должна быть ориентирована на коммерческое применение в следующих областях:
-			\begin{itemize}
-				\changefontsizes[14pt]{14pt}
-				\item системы охраны, мониторинга и управления;
-				\item системы автоматизации организаций, связанных с охраной.
-			\end{itemize}
+\subsection{Логическая модель}
+	Выстраивая логическую модель, получаем тройку (F, S, V), где F -- это позитивно образованная формула (ПОФ),
+		описывающая состояние лифта и принципы, по которым функционирует лифт,
+		S -- порядок ответов на запросы при логическом выводе, V -- внешние воздействие,
+		в данном случае имитация пассажиропотока. Так же следует отметить, что одними из основных будут
+		предикаты связанные со временем: T(t) -- момент времени t и N(t, t') -- следующий за t момент времени t'.
 
-	\section{Наименование этапов и выполняемых работ}
-		\begin{enumerate}
-\changefontsizes[14pt]{14pt}
-			\item Техническое предложение:
-				\begin{enumerate}
-\changefontsizes[14pt]{14pt}
-					\item Выбор датчиков;
-					\item Выбор структурной схемы;
-					\item Выбор оптимального варианта реализации;
-					\item Разработка и согласование с преподавателем комплекта технической документации, разрабатываемой в рамках договора;
-					\item Разработка ТД в соответствии с согласованном комплектом.
-				\end{enumerate}
-			\item Технический проект:
-				\begin{enumerate}
-\changefontsizes[14pt]{14pt}
-					\item Разработка технического проекта, в том числе:
-						\begin{itemize}
-				\changefontsizes[14pt]{14pt}
-							\item Разработка конструктивных решений Комплекса и его составных частей:
-								\begin{itemize}
-				\changefontsizes[14pt]{14pt}
-									\item Разработка чертежей;
-									\item Разработка функциональной и принципиальной схемы.
-									\item Создание рисунка печатной платы.
-								\end{itemize}
-							\item Выполнение необходимых расчетов для технических решений, обеспечивающих показатели надежности.
-						\end{itemize}
-					\item Разработка эксплуатационной документации в соответствии с согласованном перечнем.
-				\end{enumerate}
-		\end{enumerate}
+	Основными объектами в данной модели являются кабина Cab и человек Man.
+		В момент времени t кабина имеет вид Cab(i, e, S, t), где i – идентификатор кабины, e – этаж,
+		а S - маршрут кабины, список этажей. Человек имеет вид Man(e, d, τ, t), где e – этаж,
+		d – целевой этаж, который добавляется в маршрут S в момент входа человека в кабину и d ≠ e,
+		τ – длительность ожидания человеком кабины.
+		Дистанцией же будет Dist(e, S, i, t, α), где α – это дистанция от кабины i
+		на этаже е с маршрутом S, где произошёл вызов. И связь i кабины с вызовом с e этажа Conn(i, e).
+
+	В каждый момент времени $t_0$ принятия решения формула F имеет вид:\\
+
+	$ \exists A(t_0) \begin{cases} \forall T(t)\exists T(t'), N(t, t'), \\ \Phi \\ \Psi \end{cases} $\\
+
+	$A(t_0)$ -- коньюнкт, описывающий состояние системы в момент времени $t_0$. Если $A(t_0)$ содержит Man,
+		то появление человека необходимо связать с вызовом определённой кабины.
+		И группа формул \Phi порождает все варианты связи и имитирует движение кабин совместно с
+		формулой времени $\forall T(t)\exists T(t'), N(t, t')$ для некоторого количества тактов.
+		А за счёт формул \Psi происходит фильтрация некоторых вариантов.
+
+	Оставшиеся варианты оцениваются оцениваются и выбирается один из самых наилучших.
+
+	\subsubsection{Группа формул \Psi}
+
+	$ \forall Man(e, d, τ, t), N(t, t')  \exists Dist(e, S_1, 1, t, \alpha_1), ..., \\
+				Dist(e, S_k, k, t, \alpha_k)\begin{cases}\exists  Conn(1,e) \\ ... \\\exists  Conn(k, e), 
+					\\\exists  Man(e, d, τ + 1, t') \end{cases} $\\
+
+	-- формула вычисляющая дистанцию до каждой кабины при новом появлении человека
+
+	$ \forall Cab(i, e, S, t), Conn(i, e'), N(t, t') \begin{cases}
+			\forall e' < e \exists Cab(i, e - 1, S/e', t') \\
+			\forall e < e' \exists Cab(i, e + 1, S/e', t')
+	\end{cases} $
+
+
+	$ \forall Cab(i, e, S, t), S = S(e', S_1), N(t, t') \begin{cases}
+			\forall e = e' \exists Cab(i, e - 1, S_1, t') \\
+			\forall e' < e \exists Cab(i, e - 1, S, t') \\
+			\forall e < e' \exists Cab(i, e + 1, S, t')
+	\end{cases} $
+
+
+	$ \forall Cab(i, e, null, t), N(t, t')\exists Cab(i, e, null, t')$\\
+
+	-- формулы реализующие движение, где $S / e$ является операцией вставки этажа в маршрут.
+
+	\subsubsection{Группа формул \Phi}
+
+	Формулы из группы \Phi реализуют дополнительные ограничения, которые следует учитывать при 
+	построении логического вывода. В дальнейших работах они использоваться не будут. Но упомянуть о них
+	крайне необходимо, так как они дают возможность данной модели быть более гибкой к различным ситуациям.
+	А также их добавление в разрабатываемую систему не будет сложной задачей.
+
+	Например, вот формула, которая запрещает откладывать связывание вызова лифта человеком белее, чем на 4 такта:
+
+	$ \forall Man(e, d, 4, t)\exists False$\\
+
+	Это правили необходимо, в том случае если в модели будет возможна отсрочка принятия решения на вызов лифта.
+
+	\subsubsection{Итоги}
+	Таким образом определяется функция F. Её реализация будет выполнена на языке Prolog. Перевод из приведённых
+	выше формул возможен по примеру из теоретической части.
