--- a/src/conclusion.tex
+++ b/src/conclusion.tex
@@ -1,16 +1,1 @@
-\chapter*{Заключение}\addcontentsline{toc}{chapter}{Заключение}
-Для внедрения нового продукта разработан необходимый перечень документов.
-В результате курсовой работы разработан перечень документов для охранной системы.
-Также разработан программный код, который реализован в соответствии с выше освещённом 
-техническим заданием. Разработаны стандарты, которым должен соответствовать продукт.
-Проведён сравнительный анализ, результаты которого представлены в техническом
-предложении.
-
-Следует отметить то, что разработанные документы ориентируются на нормативные документы,
-что должно значительно повысить качество разрабатываемого продукта и облегчить работу над ним.
-
-В процессе курсовой работы были получены навыки к подготовке необходимой документации как для
-конструкторско-технологического продукта, так и программного обеспечения. Приобретённые навыки пригодятся
-в подготовке сопутствующей документации для магистерской диссертации.
-
-Отчёт по данной курсовой работе оформлен в соответствии с нормативным документом ВУЗа\cite{norm}.
+\chap{Заключение}
